@@ -36,6 +36,7 @@ Luigi Ballabio
 Michael J. Barber
 Chris Barker
 Quentin Barnes
+Richard Barran
 Cesar Eduardo Barros
 Des Barry
 Ulf Bartelt
